# QtPropertyBrowser

./: CMakeLists.txt  README.md  common.pri
buildlib/: buildlib.pro
examples/canvas_typed/: canvas_typed.pro  main.cpp  mainwindow.cpp  mainwindow.h  qtcanvas.cpp
examples/canvas_variant/: canvas_variant.pro  mainwindow.cpp  mainwindow.h  qtcanvas.h
examples/decoration/: main.cpp
examples/demo/: demo.pro  main.cpp
examples/extension/: main.cpp
examples/object_controller/: main.cpp  object_controller.pro  objectcontroller.cpp  objectcontroller.h
examples/simple/: main.cpp  simple.pro
src/: CMakeLists.txt  QtPropertyBrowserPlugin.cpp  QtPropertyBrowserPlugin.h  qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowser.pri  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
